--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Analytics Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Analytics App</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
@@ -46,9 +46,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>Test</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <h1>Analytics App!</h1>
+        <p>Upload your Analytics Export then follow the onscreen instructions</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Upload CSV &raquo;</a></p>
       </div>
     </div>
 
@@ -57,7 +57,7 @@
       <div class="row">
         {% for q in query %}
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>Name</h2>
           <p>{{q.name}} </p>
           <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
         </div>
