--- a/templates/index.html
+++ b/templates/index.html
@@ -1,83 +1,125 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Analytics Page</title>
+{% include 'head.html' %}
 
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/jumbotron.css" rel="stylesheet">
-  </head>
+<body>
 
-  <body>
+    {% include 'header.html' %}
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Analytics App</a>
+    <!-- Top content -->
+    <div class="top-content">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2 text">
+                    <h1>Yoga <strong>Analytics</strong></h1>
+                    <div class="description">
+                        <p>Analyze your Yoga studio's drop off rate and bring customers back immediately!</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 form-box">
+                    <form role="form" action="" method="post" class="f1">
+
+                        <h3>Get Started</h3>
+                        <p>Follow the instructions below</p>
+                        <div class="f1-steps">
+                            <div class="f1-progress">
+                                <div class="f1-progress-line" data-now-value="16.66" data-number-of-steps="5" style="width: 16.66%;"></div>
+                            </div>
+                            <div class="f1-step active">
+                                <div class="f1-step-icon"><i class="fa fa-upload"></i></div>
+                                <p>upload</p>
+                            </div>
+                            <div class="f1-step">
+                                <div class="f1-step-icon"><i class="fa fa-hand-pointer-o"></i></div>
+                                <p>specify</p>
+                            </div>
+                            <div class="f1-step">
+                                <div class="f1-step-icon"><i class="fa fa-line-chart"></i></div>
+                                <p>analyze</p>
+                            </div>
+                            <div class="f1-step">
+                                <div class="f1-step-icon"><i class="fa fa-pencil"></i></div>
+                                <p>draft</p>
+                            </div>
+                            <div class="f1-step">
+                                <div class="f1-step-icon"><i class="fa fa-envelope"></i></div>
+                                <p>send</p>
+                            </div>
+                        </div>
+
+                        <fieldset>
+                            <h4>Tell us who you are:</h4>
+                            <div class="form-group">
+                                <label class="sr-only" for="f1-first-name">First name</label>
+                                <input type="text" name="f1-first-name" placeholder="First name..." class="f1-first-name form-control" id="f1-first-name">
+                            </div>
+                            <div class="form-group">
+                                <label class="sr-only" for="f1-last-name">Last name</label>
+                                <input type="text" name="f1-last-name" placeholder="Last name..." class="f1-last-name form-control" id="f1-last-name">
+                            </div>
+                            <div class="form-group">
+                                <label class="sr-only" for="f1-about-yourself">About yourself</label>
+                                <textarea name="f1-about-yourself" placeholder="About yourself..." class="f1-about-yourself form-control" id="f1-about-yourself"></textarea>
+                            </div>
+                            <div class="f1-buttons">
+                                <button type="button" class="btn btn-next">Next</button>
+                            </div>
+                        </fieldset>
+
+                        <fieldset>
+                            <h4>Set up your account:</h4>
+                            <div class="form-group">
+                                <label class="sr-only" for="f1-email">Email</label>
+                                <input type="text" name="f1-email" placeholder="Email..." class="f1-email form-control" id="f1-email">
+                            </div>
+                            <div class="form-group">
+                                <label class="sr-only" for="f1-password">Password</label>
+                                <input type="password" name="f1-password" placeholder="Password..." class="f1-password form-control" id="f1-password">
+                            </div>
+                            <div class="form-group">
+                                <label class="sr-only" for="f1-repeat-password">Repeat password</label>
+                                <input type="password" name="f1-repeat-password" placeholder="Repeat password..." class="f1-repeat-password form-control" id="f1-repeat-password">
+                            </div>
+                            <div class="f1-buttons">
+                                <button type="button" class="btn btn-previous">Previous</button>
+                                <button type="button" class="btn btn-next">Next</button>
+                            </div>
+                        </fieldset>
+
+                        <fieldset>
+                            <h4>Social media profiles:</h4>
+                            <div class="form-group">
+                                <label class="sr-only" for="f1-facebook">Facebook</label>
+                                <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
+                            </div>
+                            <div class="form-group">
+                                <label class="sr-only" for="f1-twitter">Twitter</label>
+                                <input type="text" name="f1-twitter" placeholder="Twitter..." class="f1-twitter form-control" id="f1-twitter">
+                            </div>
+                            <div class="form-group">
+                                <label class="sr-only" for="f1-google-plus">Google plus</label>
+                                <input type="text" name="f1-google-plus" placeholder="Google plus..." class="f1-google-plus form-control" id="f1-google-plus">
+                            </div>
+                            <div class="f1-buttons">
+                                <button type="button" class="btn btn-previous">Previous</button>
+                                <button type="submit" class="btn btn-submit">Submit</button>
+                            </div>
+                        </fieldset>
+
+                    </form>
+                </div>
+            </div>
+
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Analytics App!</h1>
-        <p>Upload your Analytics Export then follow the onscreen instructions</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Upload CSV &raquo;</a></p>
-      </div>
     </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        {% for q in query %}
-        <div class="col-md-4">
-          <h2>Name</h2>
-          <p>{{q.name}} </p>
-          <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
-        </div>
-        {% endfor %}
+    {% include 'footer.html' %}
 
-      </div>
+</body>
 
-      <hr>
-
-      <footer>
-        <p>&copy; 2016 Company, Inc.</p>
-      </footer>
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="static/js/bootstrap.min.js"></script>
-  </body>
 </html>
