--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                 <div class="col-sm-8 col-sm-offset-2 text">
                     <h1>Yoga <strong>Analytics</strong></h1>
                     <div class="description">
-                        <p>Analyze your Yoga studio's drop off rate and bring customers back immediately!</p>
+                        <p>Get insight into your Yoga studio's performance and keep your top Yogis coming back!</p>
                     </div>
                 </div>
             </div>
@@ -53,38 +53,27 @@
                         </div>
 
                         <fieldset>
-                            <h4>Tell us who you are:</h4>
-                            <div class="form-group">
-                                <label class="sr-only" for="f1-first-name">First name</label>
-                                <input type="text" name="f1-first-name" placeholder="First name..." class="f1-first-name form-control" id="f1-first-name">
+                            <h4>Upload CSV:</h4>
+
+                            <div style="position:relative;">
+                                <a class='btn btn-primary' href='javascript:;'>
+                          			Choose File...
+                          			<input type="file" style='position:absolute;z-index:2;top:0;left:0;filter: alpha(opacity=0);-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";opacity:0;background-color:transparent;color:transparent;' name="file_source" size="40"  onchange='$("#upload-file-info").html($(this).val());'>
+                          		</a> &nbsp;
+                                <span class='label label-info' id="upload-file-info"></span>
                             </div>
-                            <div class="form-group">
-                                <label class="sr-only" for="f1-last-name">Last name</label>
-                                <input type="text" name="f1-last-name" placeholder="Last name..." class="f1-last-name form-control" id="f1-last-name">
-                            </div>
-                            <div class="form-group">
-                                <label class="sr-only" for="f1-about-yourself">About yourself</label>
-                                <textarea name="f1-about-yourself" placeholder="About yourself..." class="f1-about-yourself form-control" id="f1-about-yourself"></textarea>
-                            </div>
+
                             <div class="f1-buttons">
                                 <button type="button" class="btn btn-next">Next</button>
                             </div>
                         </fieldset>
 
                         <fieldset>
-                            <h4>Set up your account:</h4>
-                            <div class="form-group">
+                            <h4>Select which fields are which:</h4>
+                            <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-email">Email</label>
                                 <input type="text" name="f1-email" placeholder="Email..." class="f1-email form-control" id="f1-email">
-                            </div>
-                            <div class="form-group">
-                                <label class="sr-only" for="f1-password">Password</label>
-                                <input type="password" name="f1-password" placeholder="Password..." class="f1-password form-control" id="f1-password">
-                            </div>
-                            <div class="form-group">
-                                <label class="sr-only" for="f1-repeat-password">Repeat password</label>
-                                <input type="password" name="f1-repeat-password" placeholder="Repeat password..." class="f1-repeat-password form-control" id="f1-repeat-password">
-                            </div>
+                            </div> -->
                             <div class="f1-buttons">
                                 <button type="button" class="btn btn-previous">Previous</button>
                                 <button type="button" class="btn btn-next">Next</button>
@@ -92,22 +81,38 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Social media profiles:</h4>
-                            <div class="form-group">
+                            <h4>Select the top customer's drop off rates by studio:</h4>
+                            <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-facebook">Facebook</label>
                                 <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
-                            </div>
-                            <div class="form-group">
-                                <label class="sr-only" for="f1-twitter">Twitter</label>
-                                <input type="text" name="f1-twitter" placeholder="Twitter..." class="f1-twitter form-control" id="f1-twitter">
-                            </div>
-                            <div class="form-group">
-                                <label class="sr-only" for="f1-google-plus">Google plus</label>
-                                <input type="text" name="f1-google-plus" placeholder="Google plus..." class="f1-google-plus form-control" id="f1-google-plus">
-                            </div>
+                            </div> -->
                             <div class="f1-buttons">
                                 <button type="button" class="btn btn-previous">Previous</button>
-                                <button type="submit" class="btn btn-submit">Submit</button>
+                                <button type="button" class="btn btn-next">Next</button>
+                            </div>
+                        </fieldset>
+
+                        <fieldset>
+                            <h4>Write up personal "special offer" email:</h4>
+                            <!-- <div class="form-group">
+                                <label class="sr-only" for="f1-facebook">Facebook</label>
+                                <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
+                            </div> -->
+                            <div class="f1-buttons">
+                                <button type="button" class="btn btn-previous">Previous</button>
+                                <button type="button" class="btn btn-next">Next</button>
+                            </div>
+                        </fieldset>
+
+                        <fieldset>
+                            <h4>Send personalized emails:</h4>
+                            <!-- <div class="form-group">
+                                <label class="sr-only" for="f1-facebook">Facebook</label>
+                                <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
+                            </div> -->
+                            <div class="f1-buttons">
+                                <button type="button" class="btn btn-previous">Previous</button>
+                                <button type="submit" class="btn btn-next">Send</button>
                             </div>
                         </fieldset>
 
