--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,100 @@
+<style>
+    .footer {
+        padding: 50px 0 20px 0;
+        background-color: #35404f;
+        color: #878c94;
+    }
+
+    .footer .title {
+        text-align: left;
+        color: #fff;
+        font-size: 25px;
+    }
+
+    .footer .social-icon {
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .footer .social-icon a {
+        display: inline-block;
+        color: #fff;
+        font-size: 25px;
+        padding: 5px;
+    }
+
+    .footer .acount-icon a {
+        display: block;
+        color: #fff;
+        font-size: 18px;
+        padding: 5px;
+        text-decoration: none;
+    }
+
+    .footer .acount-icon .fa {
+        margin-right: 25px;
+    }
+
+    .footer .category a {
+        text-decoration: none;
+        color: #fff;
+        display: inline-block;
+        padding: 5px 20px;
+        margin: 1px;
+        border-radius: 4px;
+        margin-top: 6px;
+        background-color: black;
+        border: solid 1px #fff;
+    }
+
+    .footer .payment {
+        margin: 0px;
+        padding: 0px;
+        list-style-type: none
+    }
+
+    .footer .payment li {
+        list-style-type: none
+    }
+
+    .footer .payment li a {
+        text-decoration: none;
+        display: inline-block;
+        color: #fff;
+        float: left;
+        font-size: 25px;
+        padding: 10px 10px;
+    }
+</style>
+
+
+
+<footer class="footer">
+    <div class="container">
+        <!-- <div class="row">
+            <div class="col-sm-3">
+                <h4 class="title">Mission</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit, libero a molestie consectetur, sapien elit lacinia mi.</p>
+            </div>
+            <div class="col-sm-6">
+                <h4 class="title">Payment Methods</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <ul class="payment">
+                    <li><a href="#"><i class="fa fa-cc-amex" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-credit-card" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-paypal" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-cc-visa" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <hr>-->
+
+        <div class="row text-center">Yogilytics © 2017. Made by <a href="http://ethansteininger.com">Ethan Steininger</a>.</div>
+    </div>
+
+
+</footer>
+
 <!-- Javascript -->
 <script src="static/js/jquery-1.11.1.min.js"></script>
 <script src="static/bootstrap/js/bootstrap.min.js"></script>
