--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
             <div class="row">
                 <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 form-box">
-                    <form role="form" action="" method="post" class="f1">
+                    <form role="form" action="/submit" method="post" class="f1">
 
                         <h3>Get Started</h3>
                         <p>Follow the instructions below</p>
