--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                         </div>
 
                         <fieldset>
-                            <h4>Upload CSV:</h4>
+                            <h4>Upload your Yoga studio's exported CSV:</h4>
 
                             <div style="position:relative;">
                                 <a class='btn btn-primary' href='javascript:;'>
@@ -69,7 +69,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Select which fields are which:</h4>
+                            <h4>Select which fields are relevant for analytics:</h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-email">Email</label>
                                 <input type="text" name="f1-email" placeholder="Email..." class="f1-email form-control" id="f1-email">
@@ -93,7 +93,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Write up personal "special offer" email:</h4>
+                            <h4>Write up personal "special offer" emails:</h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-facebook">Facebook</label>
                                 <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
@@ -105,7 +105,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Send personalized emails:</h4>
+                            <h4>Send personalized emails and track open rate & responses:</h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-facebook">Facebook</label>
                                 <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
