--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text">
-                    <h1>Yoga <strong>Analytics</strong></h1>
+                    <h1>Yogi<strong>lytics</strong></h1>
                     <div class="description">
                         <p>Get insight into your Yoga studio's performance and keep your top Yogis coming back!</p>
                     </div>
@@ -69,7 +69,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Select which fields are relevant for analytics:</h4>
+                            <h4>Select which fields are relevant for analytics. <br> Define columns for customer's names, studios and email based on your upload.</h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-email">Email</label>
                                 <input type="text" name="f1-email" placeholder="Email..." class="f1-email form-control" id="f1-email">
@@ -81,7 +81,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Select the top customer's drop off rates by studio:</h4>
+                            <h4>Select the top customer's drop off rates by studio.<br> Sort by customers whose last visit is greater than one month ago. Select each customer to include.</h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-facebook">Facebook</label>
                                 <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
@@ -93,7 +93,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Write up personal "special offer" emails:</h4>
+                            <h4>Write up personal "special offer" emails. <br> What you see is what you get editor to include dynamic variables such as customer's name, studio, etc.</h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-facebook">Facebook</label>
                                 <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
@@ -105,7 +105,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Send personalized emails and track open rate & responses:</h4>
+                            <h4>Send personalized emails and track open rate & responses. <br> Select frequency of emails to be sent across all selected customers. </h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-facebook">Facebook</label>
                                 <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
