--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text">
-                    <h1>Yogi<strong>lytics</strong></h1>
+                    <h1>Yogi<strong style="color:#f35b3f">lytics</strong></h1>
                     <div class="description">
                         <p>Get insight into your Yoga studio's performance and keep your top Yogis coming back!</p>
                     </div>
