--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                         </div>
 
                         <fieldset>
-                            <h4>Upload your Yoga studio's exported CSV:</h4>
+                            <h4>Upload your Yoga studio's exported historical customer CSV:</h4>
 
                             <div style="position:relative;">
                                 <a class='btn btn-primary' href='javascript:;'>
@@ -69,7 +69,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Select which fields are relevant for analytics. <br> Define columns for customer's names, studios and email based on your upload.</h4>
+                            <h4>Select which fields are relevant for analytics. <br><br> Define columns for customer's names, studios and email based on your upload.</h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-email">Email</label>
                                 <input type="text" name="f1-email" placeholder="Email..." class="f1-email form-control" id="f1-email">
@@ -81,7 +81,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Select the top customer's drop off rates by studio.<br> Sort by customers whose last visit is greater than one month ago. Select each customer to include.</h4>
+                            <h4>Sort by customers whose last visit is greater than one month ago. <br><br>Select each customer to include in the segment.</h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-facebook">Facebook</label>
                                 <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
@@ -93,7 +93,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Write up personal "special offer" emails. <br> What you see is what you get editor to include dynamic variables such as customer's name, studio, etc.</h4>
+                            <h4>Write up personal "special offer" emails. <br><br> Email editor to include variables such as customer's name, studio, etc.</h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-facebook">Facebook</label>
                                 <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
@@ -105,7 +105,7 @@
                         </fieldset>
 
                         <fieldset>
-                            <h4>Send personalized emails and track open rate & responses. <br> Select frequency of emails to be sent across all selected customers. </h4>
+                            <h4>Send personalized emails and track open rate & responses. <br><br> Select frequency of emails to be sent across all selected customers with a single button. </h4>
                             <!-- <div class="form-group">
                                 <label class="sr-only" for="f1-facebook">Facebook</label>
                                 <input type="text" name="f1-facebook" placeholder="Facebook..." class="f1-facebook form-control" id="f1-facebook">
