--- a/templates/index.html
+++ b/templates/index.html
@@ -181,7 +181,7 @@
             </div>
             <!-- /.row -->
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-8">
                     <!-- /.panel -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -227,6 +227,16 @@
                     <!-- /.panel -->
 
                     <!-- /.panel -->
+                </div>
+                <div class="col-md-4">
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <i class="fa fa-clock-o fa-fw"></i> Total Sessions
+                    </div>
+                    <div class="panel-body">
+                      <div id="morris-donut-chart"></div>
+                    </div>
+                  </div>
                 </div>
             </div>
 
