--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@
                                         <td>{{q.PaidVisits}}</td>
                                         <td>{{q.TotalSessions}}</td>
                                         <td class="center">{{q.UniqueClients}}</td>
-                                        <td class="center">{{q.studio}}</td>
+                                        <td class="center">{{q.Studio}}</td>
                                     </tr>
                                   {% endfor %}
                                 </tbody>
