--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@ table thead, table tbody tr {
             <div class="row">
               <div style="margin-top: 10px;margin-bottom:0px" class="alert alert-danger alert-dismissable">
                                   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                                  The <strong>Dupont Studio</strong> lost 15% of recurring Yogis <a href="#" class="alert-link">Take Action!</a>.
+                                  The <strong>H St Studio</strong> lost 15% of recurring Yogis <a href="#" class="alert-link">Take Action!</a>.
               </div>
 
                 <div class="col-lg-12">
