--- a/templates/index.html
+++ b/templates/index.html
@@ -102,8 +102,8 @@ table thead, table tbody tr {
                                     <i class="fa fa-usd fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div class="huge">$130,000</div>
-                                    <div>Revenue!</div>
+                                    <div class="huge">{{totalSessions}}</div>
+                                    <div>Total Sessions!</div>
                                 </div>
                             </div>
                         </div>
