--- a/templates/foot.html
+++ b/templates/foot.html
@@ -16,3 +16,10 @@
 <script src="../static/datatables/js/jquery.dataTables.min.js"></script>
 <script src="../static/datatables-plugins/dataTables.bootstrap.min.js"></script>
 <script src="../static/datatables-responsive/dataTables.responsive.js"></script>
+
+<script>
+$(window).load(function() {
+  $('body').removeClass('loading')
+  $(".preload").fadeOut("slow");;
+});
+</script>
